cmake_minimum_required(VERSION 3.15)
project(project5)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -pedantic -pedantic-errors")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-limit-debug-info")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(SOURCE_FILES
        DblStack.cpp
        DblStack.h
        reverse.cpp)

set(TEST_FILES
        DblStack.cpp
        DblStack.h
        DblStackTest.cpp)

add_executable(project5 ${SOURCE_FILES})

add_executable(project5-test ${TEST_FILES})